# canadian-support-calculator

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml  run_dev.py  support_calculator_backend.spec
.github/workflows/: release.yml
electron/: backend-runtime.mjs  backend-runtime.test.mjs  main.mjs  preload.mjs  updater.mjs  updater.test.mjs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx  index.css
scripts/: build_desktop_backend.py  generate_child_support_tables.py  notarize.cjs  prepare_release.mjs  push_release.mjs
support_calculator/: __init__.py  __main__.py  api.py  benefits.py  calculations.py  dev_launcher.py  jurisdictions.py  pdf_report.py  runtime_paths.py  source_references.py  spousal_support.py  tables.py  tax.py
support_calculator/data/: bc_child_support_lookup_2017.csv  bc_child_support_tables_2017.csv  child_support_lookup_2017.csv  child_support_lookup_2025.csv  child_support_over_150k_2017.csv  child_support_over_150k_2025.csv
tests/: conftest.py  test_api.py  test_calculations.py  test_dev_launcher.py  test_runtime_paths.py
