[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canadian-support-calculator"
version = "0.1.0"
description = "Flask backend for a guideline-based support calculator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask>=3.1,<4",
  "weasyprint>=68.1",
]

[dependency-groups]
dev = [
  "pyinstaller>=6.16,<7",
  "pytest>=8.3,<9",
]

[project.scripts]
support-calculator = "support_calculator.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["support_calculator*"]

[tool.setuptools.package-data]
support_calculator = ["data/*.csv"]
